--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,23 +1,87 @@
-# .github/workflows/ci-cd.yml - Ana CI/CD Pipeline
 name: Main CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, develop, refactor/project-structure ]
   pull_request:
     branches: [ main ]
 
 jobs:
-  test-and-build:
+  test:
     runs-on: ubuntu-latest
+    
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 17
+
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
-      - name: Run tests
-        run: mvn clean test
-      - name: Build application
-        run: mvn clean package
+          cache: maven
+
+      - name: Check environment
+        run: |
+          echo "Java version:"
+          java -version
+          echo "Maven version:"
+          mvn -version
+
+      - name: Build and test
+        run: |
+          # Root projeden build et
+          mvn clean test
+
+      - name: Generate test report
+        if: always()
+        uses: dorny/test-reporter@v1
+        continue-on-error: true
+        with:
+          name: Maven Tests
+          path: '**/target/surefire-reports/TEST-*.xml'
+          reporter: java-junit
+
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Build with Maven
+        run: mvn clean package -DskipTests
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: jar-artifacts
+          path: |
+            service/*/target/*.jar
+            !service/*/target/*-sources.jar
+
+  security-scan:
+    needs: build
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: Run security check
+        run: |
+          echo "Running security scan..."
+          # Geçici olarak sadece log
+          # mvn org.owasp:dependency-check-maven:check || true
