--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -1,4 +1,3 @@
-# .github/workflows/pr-validation.yml - Pull Request Validation
 name: PR Validation
 
 on:
@@ -8,11 +7,25 @@ on:
 jobs:
   validate:
     runs-on: ubuntu-latest
+    
     steps:
       - uses: actions/checkout@v3
-      - name: Check code formatting
-        run: mvn spotless:check
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Check code compilation
+        run: mvn clean compile
+
       - name: Run unit tests
         run: mvn test
-      - name: Check test coverage
-        run: mvn jacoco:report
+
+      - name: Check test results
+        if: always()
+        run: |
+          echo "Test Summary:"
+          find . -name "TEST-*.xml" -exec echo "Found test results: {}" \;
