--- a/pom.xml
+++ b/pom.xml
@@ -14,39 +14,21 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.0</version>
+        <version>3.5.3</version>
         <relativePath/>
     </parent>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <spring-cloud.version>2023.0.0</spring-cloud.version>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <modules>
-        <!-- Common Modules -->
-        <module>common/common-dto</module>
-        <module>common/common-exception</module>
-        <module>common/common-security</module>
-        <module>common/common-utils</module>
-
-        <!-- Infrastructure -->
-        <module>infrastructure/api-gateway</module>
-        <module>infrastructure/config-server</module>
-
-        <!-- Business Services -->
-        <module>service/accounting-service</module>
-        <module>service/auth-service</module>
-        <module>service/company-service</module>
+        <!-- Sadece mevcut modülleri ekleyelim -->
         <module>service/contact-service</module>
-        <module>service/employee-service</module>
-        <module>service/inventory-service</module>
-        <module>service/logistics-service</module>
-        <module>service/order-service</module>
-        <module>service/production-service</module>
         <module>service/user-service</module>
     </modules>
 
