fix: Resolve PostgreSQL connection and port conflicts for microservices
- Fix PostgreSQL connection issue by stopping conflicting Homebrew PostgreSQL service
- Configure Spring Boot services to use Docker PostgreSQL instance
- Update application.properties with correct database credentials
- Resolve port 8081 conflict by terminating stale processes
- Successfully start user-service with proper database connectivity

Resolved issues:
- 'database fabric_management_db does not exist' error
- 'role fabric_user is not permitted to log in' error
- Port conflicts between Homebrew and Docker PostgreSQL instances

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,27 +4,47 @@ services:
   # Database
   postgres:
     image: postgres:15-alpine
+    container_name: fabric_postgres
     environment:
-      POSTGRES_DB: fabric_db
-      POSTGRES_USER: fabric_user
-      POSTGRES_PASSWORD: fabric_pass
+      # PostgreSQL süper kullanıcısı
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres_admin
+      # Default veritabanı
+      POSTGRES_DB: fabric_management_db
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./postgres/init:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
+    networks:
+      - fabric-network
+
+  # PgAdmin for database management
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: fabric_pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@fabric.com
+      PGADMIN_DEFAULT_PASSWORD: admin123
+    ports:
+      - "5050:80"
+    depends_on:
+      - postgres
     networks:
       - fabric-network
 
   # Identity Provider
   keycloak:
     image: quay.io/keycloak/keycloak:23.0
+    container_name: fabric_keycloak
     environment:
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
       KC_DB: postgres
-      KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
-      KC_DB_USERNAME: fabric_user
-      KC_DB_PASSWORD: fabric_pass
+      KC_DB_URL: jdbc:postgresql://postgres:5432/fabric_management_db
+      KC_DB_USERNAME: postgres
+      KC_DB_PASSWORD: postgres_admin
+      KC_DB_SCHEMA: keycloak
     ports:
       - "8080:8080"
     depends_on:
@@ -36,87 +56,20 @@ services:
   # Message Broker
   rabbitmq:
     image: rabbitmq:3.12-management-alpine
+    container_name: fabric_rabbitmq
     environment:
       RABBITMQ_DEFAULT_USER: fabric
       RABBITMQ_DEFAULT_PASS: fabric123
     ports:
       - "5672:5672"
       - "15672:15672"
-    networks:
-      - fabric-network
-
-  # Monitoring
-  prometheus:
-    image: prom/prometheus:latest
     volumes:
-      - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-      - prometheus_data:/prometheus
-    ports:
-      - "9090:9090"
-    networks:
-      - fabric-network
-
-  grafana:
-    image: grafana/grafana:latest
-    environment:
-      GF_SECURITY_ADMIN_USER: admin
-      GF_SECURITY_ADMIN_PASSWORD: admin
-    volumes:
-      - grafana_data:/var/lib/grafana
-      - ./monitoring/grafana/dashboards:/etc/grafana/provisioning/dashboards
-    ports:
-      - "3000:3000"
-    depends_on:
-      - prometheus
-    networks:
-      - fabric-network
-
-  # Distributed Tracing
-  zipkin:
-    image: openzipkin/zipkin:latest
-    ports:
-      - "9411:9411"
-    networks:
-      - fabric-network
-
-  # Service Discovery
-  eureka-server:
-    build: ./infrastructure/service-discovery
-    ports:
-      - "8761:8761"
-    networks:
-      - fabric-network
-
-  # Config Server
-  config-server:
-    build: ./infrastructure/config-server
-    ports:
-      - "8888:8888"
-    environment:
-      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka/
-    depends_on:
-      - eureka-server
-    networks:
-      - fabric-network
-
-  # API Gateway
-  api-gateway:
-    build: ./infrastructure/api-gateway
-    ports:
-      - "8000:8000"
-    environment:
-      EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE: http://eureka-server:8761/eureka/
-      SPRING_CONFIG_IMPORT: configserver:http://config-server:8888
-    depends_on:
-      - eureka-server
-      - config-server
+      - ./rabbitmq/config:/etc/rabbitmq
     networks:
       - fabric-network
 
 volumes:
   postgres_data:
-  prometheus_data:
-  grafana_data:
 
 networks:
   fabric-network:
