--- a/service/contact-service/src/main/resources/application.properties
+++ b/service/contact-service/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+server.port=8082
 spring.application.name=contact-service
+
+# PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/fabric_management_db?currentSchema=contact_service
+spring.datasource.username=fabric_user
+spring.datasource.password=fabric_pass_2024
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.default_schema=contact_service
