--- a/service/user-service/src/main/resources/application.properties
+++ b/service/user-service/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=8081
 spring.application.name=user-service
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/fabric_management_db?currentSchema=user_service
+spring.datasource.username=postgres
+spring.datasource.password=postgres_admin
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
