--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up JDK 21
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
@@ -29,8 +29,8 @@ jobs:
 
       - name: Build and test
         run: |
-          # Root projeden build et
-          mvn clean test
+          # Only build existing modules
+          mvn clean test -pl service/user-service,service/contact-service
 
       - name: Generate test report
         if: always()
@@ -44,22 +44,22 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
-    
+
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up JDK 21
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
           cache: maven
 
       - name: Build with Maven
-        run: mvn clean package -DskipTests
+        run: mvn clean package -DskipTests -pl service/user-service,service/contact-service
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: jar-artifacts
           path: |
@@ -70,12 +70,12 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     continue-on-error: true
-    
+
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up JDK 21
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
@@ -83,5 +83,4 @@ jobs:
       - name: Run security check
         run: |
           echo "Running security scan..."
-          # Geçici olarak sadece log
-          # mvn org.owasp:dependency-check-maven:check || true
+          # Security scan placeholder
