--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -9,20 +9,20 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up JDK 21
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
           cache: maven
 
       - name: Check code compilation
-        run: mvn clean compile
+        run: mvn clean compile -pl service/user-service,service/contact-service
 
       - name: Run unit tests
-        run: mvn test
+        run: mvn test -pl service/user-service,service/contact-service
 
       - name: Check test results
         if: always()
