feat: Add auth-service with Spring Security and JWT support
- Create auth-service using Spring Initializr
- Add Spring Security and OAuth2 Resource Server dependencies
- Implement basic SecurityConfig with stateless session management
- Add AuthController with health and login endpoints
- Configure Keycloak admin client for future integration
- Set up JWT dependencies for token handling
- Configure port 8083 for auth-service
- Update root pom.xml to include auth-service module

Auth endpoints:
- GET /api/auth/health (public)
- GET /api/auth/login (public)
- All other endpoints require authentication

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     </properties>
 
     <modules>
-        <!-- Sadece mevcut modülleri ekleyelim -->
+        <!-- Only include modules that have pom.xml files -->
         <module>service/contact-service</module>
         <module>service/user-service</module>
     </modules>
@@ -50,6 +50,14 @@
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <configuration>
+                        <source>21</source>
+                        <target>21</target>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
