chore(project-structure): cleanup IDE files, update config scripts and base setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
-cat > .gitignore << 'EOF'
-# Compiled class files
+# ==============================================
+# FABRIC MANAGEMENT SYSTEM - GITIGNORE
+# ==============================================
+
+# ==============================================
+# JAVA & MAVEN
+# ==============================================
 *.class
 target/
 *.jar
 *.war
 *.ear
 
-# Maven
+# Maven specific
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -17,6 +22,9 @@ buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
 
+# ==============================================
+# IDE FILES
+# ==============================================
 # IntelliJ IDEA
 .idea/
 *.iws
@@ -35,23 +43,105 @@ out/
 
 # VS Code
 .vscode/
+*.code-workspace
 
+# ==============================================
+# OPERATING SYSTEM FILES
+# ==============================================
 # Mac
 .DS_Store
+.AppleDouble
+.LSOverride
 
-# Logs
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+
+# ==============================================
+# LOGS & TEMPORARY FILES
+# ==============================================
 *.log
 logs/
+*.tmp
+*.temp
+*.swp
+*.swo
+*~.nib
 
-# Database
+# ==============================================
+# DATABASE FILES
+# ==============================================
 *.db
 *.sqlite
+*.h2.db
+*.trace.db
+*.lock.db
 
-# Environment files
+# ==============================================
+# ENVIRONMENT & SECURITY FILES
+# ==============================================
 .env
 .env.local
+.env.prod
+.env.staging
 .env.*.local
 
-# Docker
+# API Keys and secrets
+secrets/
+*.pem
+*.key
+*.p12
+*.jks
+
+# ==============================================
+# DOCKER & DEPLOYMENT
+# ==============================================
+docker-compose.override.yml.backup
+.docker/
+containers/
+
+# ==============================================
+# APPLICATION SPECIFIC
+# ==============================================
+# Uploads and file storage
+uploads/
+temp-files/
+/tmp/fabric-uploads/
+
+# Generated documentation
+docs/generated/
+
+# Test coverage reports
+coverage/
+*.lcov
+
+# Spring Boot
+spring-shell.log
+*.pid
+
+# ==============================================
+# NODE.JS (if used for frontend)
+# ==============================================
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# ==============================================
+# MONITORING & METRICS
+# ==============================================
+metrics/
+monitoring-data/
+
+# Kişisel environment dosyaları
+.env.save
+
+# Local override dosyası (sadece local içinse)
 docker-compose.override.yml
-EOF.idea/
+
+.env.save
