--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,14 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.version>1.0.0-SNAPSHOT</project.version>
 
         <!-- Spring versions -->
-        <spring-boot.version>3.2.0</spring-boot.version>
+        <spring-boot.version>3.5.2</spring-boot.version>
         <spring-cloud.version>2023.0.0</spring-cloud.version>
 
         <!-- Database versions -->
-        <postgresql.version>42.7.1</postgresql.version>
+        <postgresql.version>42.7.2</postgresql.version>
         <flyway.version>10.15.0</flyway.version>
 
         <!-- Utility versions -->
@@ -33,14 +34,27 @@
         <mapstruct.version>1.5.5.Final</mapstruct.version>
 
         <!-- Test versions -->
-        <testcontainers.version>1.19.3</testcontainers.version>
+        <testcontainers.version>1.20.4</testcontainers.version>
+
+        <!-- Geocoding API versions -->
+        <google-maps.version>0.18.0</google-maps.version>
+        <okhttp.version>4.12.0</okhttp.version>
+        <gson.version>2.10.1</gson.version>
+        <retrofit.version>2.9.0</retrofit.version>
+
+        <!-- Documentation versions -->
+        <springdoc-openapi.version>2.2.0</springdoc-openapi.version>
+
+        <!-- Cache versions -->
+        <caffeine.version>3.1.8</caffeine.version>
     </properties>
 
     <modules>
         <module>common/common-core</module>
-        <module>common/common-persistence</module>
         <module>common/common-web</module>
         <module>services/user-service</module>
+        <module>services/contact-service</module>
+        <module>services/company-service</module>
     </modules>
 
     <dependencyManagement>
@@ -63,7 +77,7 @@
                 <scope>import</scope>
             </dependency>
 
-            <!-- PostgreSQL -->
+            <!-- postgresql -->
             <dependency>
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
@@ -98,6 +112,46 @@
                 <version>${testcontainers.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <!-- Geocoding Dependencies -->
+            <dependency>
+                <groupId>com.google.maps</groupId>
+                <artifactId>google-maps-services</artifactId>
+                <version>${google-maps.version}</version>
+            </dependency>
+
+            <!-- OkHttp - CVE fix için -->
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>${okhttp.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.squareup.retrofit2</groupId>
+                <artifactId>retrofit</artifactId>
+                <version>${retrofit.version}</version>
+            </dependency>
+
+            <!-- Documentation Dependencies -->
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                <version>${springdoc-openapi.version}</version>
+            </dependency>
+
+            <!-- Cache Dependencies -->
+            <dependency>
+                <groupId>com.github.ben-manes.caffeine</groupId>
+                <artifactId>caffeine</artifactId>
+                <version>${caffeine.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -136,5 +190,4 @@
             </plugins>
         </pluginManagement>
     </build>
-
 </project>
