refactor(config): standardize YAML configuration across all services and modules
- Processed 16 configuration files across services and common modules
- Standardized base + environment-specific (local, prod) structure
- Centralized shared configs (logging, actuator, security) in common-core
- Removed configs from common-security per DDD principles
- Auth-service (8081): JWT refresh, password policies, login attempt limits
- User-service (8082): profile uploads, notification settings
- Company-service (8083): tax validation, Google Maps, document uploads
- Contact-service (8084): communication providers, import/export
- Environment-specific overrides:
  * Local: dev-friendly, SQL logging, relaxed security
  * Prod: optimized pools, strict security, secret management
- Unified DB connection via env variables (, , etc.)

This commit delivers a consistent, maintainable, and production-ready
configuration system aligned with DDD and DevOps best practices.

--- a/common/common-security/src/main/resources/application.yml
+++ b/common/common-security/src/main/resources/application.yml
@@ -1,4 +1,4 @@
-# DELETED - Runtime configurations belong in individual microservices
-# This file has been removed as part of DDD refactoring
-# Each service should maintain its own application.yml files
+# This directory no longer contains configuration files
+# Runtime configurations have been moved to individual services as part of DDD refactoring
+# See COMMON-SECURITY-REFACTORING-COMPLETE.md for details
 
