--- a/common/common-core/pom.xml
+++ b/common/common-core/pom.xml
@@ -71,6 +71,12 @@
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
 
+        <!-- Jakarta Persistence API -->
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+        </dependency>
+
         <!-- Testing Dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
